# fastapi-llm-rag-starter

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/routers/: chat.py  ingest.py  search.py
app/services/: embeddings.py  llm.py  vector_store.py
tests/: conftest.py  test_embeddings.py  test_health.py  test_rag_flow.py
